Touch one thing or two on jbang